// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notes components should render <H3 /> correctly 1`] = `
.c0 {
  margin-bottom: 30px;
}

<styled.h3
  className="c0"
/>
`;

exports[`Notes components should render <NoteBody /> correctly 1`] = `
.c0 {
  word-break: break-all;
}

<div
  className="c0"
/>
`;

exports[`Notes components should render <NoteDescription /> correctly 1`] = `
.c0 {
  margin-top: 1rem;
}

<p
  className="c0"
/>
`;

exports[`Notes components should render <NoteItem /> correctly 1`] = `
.c0 {
  margin-bottom: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Notes components should render <NoteLabel /> correctly 1`] = `
.c0 {
  font-weight: 700;
}

<span
  className="c0"
/>
`;

exports[`Notes components should render <Wrapper /> correctly 1`] = `
.c0 {
  clear: both;
  margin-bottom: 1.5rem;
  padding-top: 1rem;
}

<div
  className="c0"
/>
`;
